metrics/network-policy-monitoring-allow-egress-alertmanager-mail.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-allow-egress-alertmanager-mail
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app: alertmanager
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mail
          podSelector:
            matchLabels:
              app: postfix
              tier: mail
      ports:
        - protocol: TCP
          port: 587
